Fix slight misalignment of image for cards

--- a/app/scripts/src/less/ui/replay/hand.less
+++ b/app/scripts/src/less/ui/replay/hand.less
@@ -49,7 +49,7 @@
 
 		&:last-child {
 			margin-right: 0;
-		}		
+		}
 
 		.transformed-from-card {
 			background-image: url(images/trigger_visual.png);
@@ -70,17 +70,6 @@
 		    left: 10%;
 		    top: 5%;
 		}
-
-		&.minion .art {
-    		clip-path: ellipse(45% 43% at 52% 49%);
-		}
-
-		&.spell .art {
-		    clip-path: inset(6% 1% 20% -3%);
-		    width: 70%;
-		    left: 17%;
-		    top: 12%;
-    	}
 
 
 		.option-on {
