--- a/app/scripts/src/less/ui/replay/rendered-card.less
+++ b/app/scripts/src/less/ui/replay/rendered-card.less
@@ -13,7 +13,7 @@
 	img {
 		display: inherit;
 	}
-	
+
 	.art {
 		width: 90%;
 	    position: absolute;
@@ -31,14 +31,14 @@
 	}
 
 	&.minion .art {
-		clip-path: ellipse(41% 60% at 53% 59%);
+		clip-path: ellipse(45% 43% at 52% 49%);
 	}
 
 	&.spell .art {
 	    clip-path: inset(6% 1% 20% -3%);
 	    width: 70%;
 	    left: 17%;
-	    top: 12%;
+	    top: 10%;
 	}
 
 	&.weapon .art {
@@ -234,7 +234,7 @@
 		    text-align: center;
 		    text-shadow: -1px -1px 0 #000, 0px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0px 1px 0 #000, 1px 1px 0 #000;
 		    font-weight: bold;
-		     
+
 		    &::before {
 			    content: "";
 			    padding-top: 100%;
@@ -274,7 +274,7 @@
 		    text-align: center;
 		    text-shadow: -1px -1px 0 #000, 0px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0px 1px 0 #000, 1px 1px 0 #000;
 		    font-weight: bold;
-		     
+
 		    &::before {
 			    content: "";
 			    padding-top: 100%;
@@ -313,7 +313,7 @@
 		    text-align: center;
 		    text-shadow: -1px -1px 0 #000, 0px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0px 1px 0 #000, 1px 1px 0 #000;
 		    font-weight: bold;
-		     
+
 		    &::before {
 			    content: "";
 			    padding-top: 100%;
